# basic-cli

./: Cargo.toml  tests.sh
.github/workflows/: bundle.yaml
crates/roc_command/: Cargo.toml
crates/roc_command/src/: lib.rs
crates/roc_crypto/: Cargo.toml
crates/roc_crypto/src/: lib.rs
crates/roc_host/: Cargo.toml
crates/roc_host/src/: lib.rs
platform/: Cmd.roc  Crypto.roc  Host.roc  InternalCmd.roc  main.roc
tests/: cmd-test.roc  crypto.roc  pdeathsig-helper.roc  spawn-grouped-pdeathsig-test.roc  spawn-grouped-test.roc
